[metadata]
name = kmgp-scheduler
version = 1.0.0
url = https://github.com/x0ul/kmgp
license = BSD-3-Clause
maintainer = Cody Harris
maintainer_email = kmgp-scheduler@hypodyne.net
description = An internal site for DJs to schedule shows
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = scheduler
